Compiler_Project/Source_Files/generated_source/CParser.cpp

    #include <map>
    #include "intermediate/symtab/Symtab.h"
    #include "intermediate/type/Typespec.h"
    using namespace intermediate::symtab;
    using namespace intermediate::type;


// Generated from ../Source_Files/antlr/C.g4 by ANTLR 4.8


#include "CVisitor.h"

#include "CParser.h"


using namespace antlrcpp;
using namespace antlr4;

CParser::CParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

CParser::~CParser() {
  delete _interpreter;
}

std::string CParser::getGrammarFileName() const {
  return "C.g4";
}

const std::vector<std::string>& CParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& CParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

CParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CParser::FunctionDefinitionContext *> CParser::ProgramContext::functionDefinition() {
  return getRuleContexts<CParser::FunctionDefinitionContext>();
}

CParser::FunctionDefinitionContext* CParser::ProgramContext::functionDefinition(size_t i) {
  return getRuleContext<CParser::FunctionDefinitionContext>(i);
}

std::vector<CParser::FunctionDeclarationContext *> CParser::ProgramContext::functionDeclaration() {
  return getRuleContexts<CParser::FunctionDeclarationContext>();
}

CParser::FunctionDeclarationContext* CParser::ProgramContext::functionDeclaration(size_t i) {
  return getRuleContext<CParser::FunctionDeclarationContext>(i);
}

std::vector<CParser::C_statementContext *> CParser::ProgramContext::c_statement() {
  return getRuleContexts<CParser::C_statementContext>();
}

CParser::C_statementContext* CParser::ProgramContext::c_statement(size_t i) {
  return getRuleContext<CParser::C_statementContext>(i);
}


size_t CParser::ProgramContext::getRuleIndex() const {
  return CParser::RuleProgram;
}


antlrcpp::Any CParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

CParser::ProgramContext* CParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, CParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(107);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(104);
        functionDefinition();
        break;
      }

      case 2: {
        setState(105);
        functionDeclaration();
        break;
      }

      case 3: {
        setState(106);
        c_statement();
        break;
      }

      }
      setState(109); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << CParser::T__0)
      | (1ULL << CParser::T__7)
      | (1ULL << CParser::INT)
      | (1ULL << CParser::BOOL)
      | (1ULL << CParser::FLOAT)
      | (1ULL << CParser::VOID)
      | (1ULL << CParser::DO)
      | (1ULL << CParser::WHILE)
      | (1ULL << CParser::FOR)
      | (1ULL << CParser::IF)
      | (1ULL << CParser::PRINT)
      | (1ULL << CParser::PRINTLN)
      | (1ULL << CParser::READ)
      | (1ULL << CParser::READLN)
      | (1ULL << CParser::RETURN)
      | (1ULL << CParser::IDENTIFIER))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- C_statementContext ------------------------------------------------------------------

CParser::C_statementContext::C_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CParser::StatementContext* CParser::C_statementContext::statement() {
  return getRuleContext<CParser::StatementContext>(0);
}

CParser::EmptyStatementContext* CParser::C_statementContext::emptyStatement() {
  return getRuleContext<CParser::EmptyStatementContext>(0);
}


size_t CParser::C_statementContext::getRuleIndex() const {
  return CParser::RuleC_statement;
}


antlrcpp::Any CParser::C_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitC_statement(this);
  else
    return visitor->visitChildren(this);
}

CParser::C_statementContext* CParser::c_statement() {
  C_statementContext *_localctx = _tracker.createInstance<C_statementContext>(_ctx, getState());
  enterRule(_localctx, 2, CParser::RuleC_statement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(117);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CParser::T__7:
      case CParser::INT:
      case CParser::BOOL:
      case CParser::FLOAT:
      case CParser::VOID:
      case CParser::DO:
      case CParser::WHILE:
      case CParser::FOR:
      case CParser::IF:
      case CParser::PRINT:
      case CParser::PRINTLN:
      case CParser::READ:
      case CParser::READLN:
      case CParser::RETURN:
      case CParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(111);
        statement();
        setState(112);
        match(CParser::T__0);
        break;
      }

      case CParser::T__0: {
        enterOuterAlt(_localctx, 2);
        setState(114);
        emptyStatement();
        setState(115);
        match(CParser::T__0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

CParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CParser::AssignmentStatementContext* CParser::StatementContext::assignmentStatement() {
  return getRuleContext<CParser::AssignmentStatementContext>(0);
}

CParser::VariableDeclarationContext* CParser::StatementContext::variableDeclaration() {
  return getRuleContext<CParser::VariableDeclarationContext>(0);
}

CParser::ControlStatementContext* CParser::StatementContext::controlStatement() {
  return getRuleContext<CParser::ControlStatementContext>(0);
}

CParser::PrintStatementContext* CParser::StatementContext::printStatement() {
  return getRuleContext<CParser::PrintStatementContext>(0);
}

CParser::PrintLnStatementContext* CParser::StatementContext::printLnStatement() {
  return getRuleContext<CParser::PrintLnStatementContext>(0);
}

CParser::ReadStatementContext* CParser::StatementContext::readStatement() {
  return getRuleContext<CParser::ReadStatementContext>(0);
}

CParser::ReadlnStatementContext* CParser::StatementContext::readlnStatement() {
  return getRuleContext<CParser::ReadlnStatementContext>(0);
}

CParser::FunctionCallContext* CParser::StatementContext::functionCall() {
  return getRuleContext<CParser::FunctionCallContext>(0);
}

CParser::ReturnStatementContext* CParser::StatementContext::returnStatement() {
  return getRuleContext<CParser::ReturnStatementContext>(0);
}


size_t CParser::StatementContext::getRuleIndex() const {
  return CParser::RuleStatement;
}


antlrcpp::Any CParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

CParser::StatementContext* CParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, CParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(128);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(119);
      assignmentStatement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(120);
      variableDeclaration();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(121);
      controlStatement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(122);
      printStatement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(123);
      printLnStatement();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(124);
      readStatement();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(125);
      readlnStatement();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(126);
      functionCall();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(127);
      returnStatement();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EmptyStatementContext ------------------------------------------------------------------

CParser::EmptyStatementContext::EmptyStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CParser::EmptyStatementContext::getRuleIndex() const {
  return CParser::RuleEmptyStatement;
}


antlrcpp::Any CParser::EmptyStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitEmptyStatement(this);
  else
    return visitor->visitChildren(this);
}

CParser::EmptyStatementContext* CParser::emptyStatement() {
  EmptyStatementContext *_localctx = _tracker.createInstance<EmptyStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, CParser::RuleEmptyStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);

   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationContext ------------------------------------------------------------------

CParser::VariableDeclarationContext::VariableDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CParser::TypeIdentifierContext* CParser::VariableDeclarationContext::typeIdentifier() {
  return getRuleContext<CParser::TypeIdentifierContext>(0);
}

std::vector<CParser::VariableIdentifierContext *> CParser::VariableDeclarationContext::variableIdentifier() {
  return getRuleContexts<CParser::VariableIdentifierContext>();
}

CParser::VariableIdentifierContext* CParser::VariableDeclarationContext::variableIdentifier(size_t i) {
  return getRuleContext<CParser::VariableIdentifierContext>(i);
}

CParser::LengthContext* CParser::VariableDeclarationContext::length() {
  return getRuleContext<CParser::LengthContext>(0);
}


size_t CParser::VariableDeclarationContext::getRuleIndex() const {
  return CParser::RuleVariableDeclaration;
}


antlrcpp::Any CParser::VariableDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitVariableDeclaration(this);
  else
    return visitor->visitChildren(this);
}

CParser::VariableDeclarationContext* CParser::variableDeclaration() {
  VariableDeclarationContext *_localctx = _tracker.createInstance<VariableDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 8, CParser::RuleVariableDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(147);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(132);
      typeIdentifier();
      setState(133);
      variableIdentifier();
      setState(138);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == CParser::T__1) {
        setState(134);
        match(CParser::T__1);
        setState(135);
        variableIdentifier();
        setState(140);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(141);
      typeIdentifier();
      setState(142);
      variableIdentifier();
      setState(143);
      match(CParser::T__2);
      setState(144);
      length();
      setState(145);
      match(CParser::T__3);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LengthContext ------------------------------------------------------------------

CParser::LengthContext::LengthContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CParser::LengthContext::INTEGER() {
  return getToken(CParser::INTEGER, 0);
}


size_t CParser::LengthContext::getRuleIndex() const {
  return CParser::RuleLength;
}


antlrcpp::Any CParser::LengthContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitLength(this);
  else
    return visitor->visitChildren(this);
}

CParser::LengthContext* CParser::length() {
  LengthContext *_localctx = _tracker.createInstance<LengthContext>(_ctx, getState());
  enterRule(_localctx, 10, CParser::RuleLength);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(149);
    match(CParser::INTEGER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentStatementContext ------------------------------------------------------------------

CParser::AssignmentStatementContext::AssignmentStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CParser::AssignmentStatementContext::getRuleIndex() const {
  return CParser::RuleAssignmentStatement;
}

void CParser::AssignmentStatementContext::copyFrom(AssignmentStatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AssignVariableContext ------------------------------------------------------------------

CParser::LhsContext* CParser::AssignVariableContext::lhs() {
  return getRuleContext<CParser::LhsContext>(0);
}

CParser::RhsContext* CParser::AssignVariableContext::rhs() {
  return getRuleContext<CParser::RhsContext>(0);
}

CParser::AssignVariableContext::AssignVariableContext(AssignmentStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CParser::AssignVariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitAssignVariable(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DecrementVariableContext ------------------------------------------------------------------

CParser::VariableContext* CParser::DecrementVariableContext::variable() {
  return getRuleContext<CParser::VariableContext>(0);
}

CParser::DecrementVariableContext::DecrementVariableContext(AssignmentStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CParser::DecrementVariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitDecrementVariable(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IrncrementVariableContext ------------------------------------------------------------------

CParser::VariableContext* CParser::IrncrementVariableContext::variable() {
  return getRuleContext<CParser::VariableContext>(0);
}

CParser::IrncrementVariableContext::IrncrementVariableContext(AssignmentStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CParser::IrncrementVariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitIrncrementVariable(this);
  else
    return visitor->visitChildren(this);
}
CParser::AssignmentStatementContext* CParser::assignmentStatement() {
  AssignmentStatementContext *_localctx = _tracker.createInstance<AssignmentStatementContext>(_ctx, getState());
  enterRule(_localctx, 12, CParser::RuleAssignmentStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(161);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<AssignmentStatementContext *>(_tracker.createInstance<CParser::AssignVariableContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(151);
      lhs();
      setState(152);
      match(CParser::T__4);
      setState(153);
      rhs();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<AssignmentStatementContext *>(_tracker.createInstance<CParser::DecrementVariableContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(155);
      variable();
      setState(156);
      match(CParser::T__5);
      break;
    }

    case 3: {
      _localctx = dynamic_cast<AssignmentStatementContext *>(_tracker.createInstance<CParser::IrncrementVariableContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(158);
      variable();
      setState(159);
      match(CParser::T__6);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LhsContext ------------------------------------------------------------------

CParser::LhsContext::LhsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CParser::VariableContext* CParser::LhsContext::variable() {
  return getRuleContext<CParser::VariableContext>(0);
}

CParser::VariableDeclarationContext* CParser::LhsContext::variableDeclaration() {
  return getRuleContext<CParser::VariableDeclarationContext>(0);
}


size_t CParser::LhsContext::getRuleIndex() const {
  return CParser::RuleLhs;
}


antlrcpp::Any CParser::LhsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitLhs(this);
  else
    return visitor->visitChildren(this);
}

CParser::LhsContext* CParser::lhs() {
  LhsContext *_localctx = _tracker.createInstance<LhsContext>(_ctx, getState());
  enterRule(_localctx, 14, CParser::RuleLhs);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(165);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(163);
        variable();
        break;
      }

      case CParser::INT:
      case CParser::BOOL:
      case CParser::FLOAT:
      case CParser::VOID: {
        enterOuterAlt(_localctx, 2);
        setState(164);
        variableDeclaration();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RhsContext ------------------------------------------------------------------

CParser::RhsContext::RhsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CParser::ExpressionContext* CParser::RhsContext::expression() {
  return getRuleContext<CParser::ExpressionContext>(0);
}


size_t CParser::RhsContext::getRuleIndex() const {
  return CParser::RuleRhs;
}


antlrcpp::Any CParser::RhsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitRhs(this);
  else
    return visitor->visitChildren(this);
}

CParser::RhsContext* CParser::rhs() {
  RhsContext *_localctx = _tracker.createInstance<RhsContext>(_ctx, getState());
  enterRule(_localctx, 16, CParser::RuleRhs);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(167);
    expression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ControlScopeContext ------------------------------------------------------------------

CParser::ControlScopeContext::ControlScopeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CParser::C_statementContext *> CParser::ControlScopeContext::c_statement() {
  return getRuleContexts<CParser::C_statementContext>();
}

CParser::C_statementContext* CParser::ControlScopeContext::c_statement(size_t i) {
  return getRuleContext<CParser::C_statementContext>(i);
}

std::vector<CParser::ControlStatementContext *> CParser::ControlScopeContext::controlStatement() {
  return getRuleContexts<CParser::ControlStatementContext>();
}

CParser::ControlStatementContext* CParser::ControlScopeContext::controlStatement(size_t i) {
  return getRuleContext<CParser::ControlStatementContext>(i);
}


size_t CParser::ControlScopeContext::getRuleIndex() const {
  return CParser::RuleControlScope;
}


antlrcpp::Any CParser::ControlScopeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitControlScope(this);
  else
    return visitor->visitChildren(this);
}

CParser::ControlScopeContext* CParser::controlScope() {
  ControlScopeContext *_localctx = _tracker.createInstance<ControlScopeContext>(_ctx, getState());
  enterRule(_localctx, 18, CParser::RuleControlScope);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(169);
    match(CParser::T__7);
    setState(174);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << CParser::T__0)
      | (1ULL << CParser::T__7)
      | (1ULL << CParser::INT)
      | (1ULL << CParser::BOOL)
      | (1ULL << CParser::FLOAT)
      | (1ULL << CParser::VOID)
      | (1ULL << CParser::DO)
      | (1ULL << CParser::WHILE)
      | (1ULL << CParser::FOR)
      | (1ULL << CParser::IF)
      | (1ULL << CParser::PRINT)
      | (1ULL << CParser::PRINTLN)
      | (1ULL << CParser::READ)
      | (1ULL << CParser::READLN)
      | (1ULL << CParser::RETURN)
      | (1ULL << CParser::IDENTIFIER))) != 0)) {
      setState(172);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
      case 1: {
        setState(170);
        c_statement();
        break;
      }

      case 2: {
        setState(171);
        controlStatement();
        break;
      }

      }
      setState(176);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(177);
    match(CParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ControlStatementContext ------------------------------------------------------------------

CParser::ControlStatementContext::ControlStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CParser::DoWhileLoopContext* CParser::ControlStatementContext::doWhileLoop() {
  return getRuleContext<CParser::DoWhileLoopContext>(0);
}

CParser::WhileLoopContext* CParser::ControlStatementContext::whileLoop() {
  return getRuleContext<CParser::WhileLoopContext>(0);
}

CParser::ForLoopContext* CParser::ControlStatementContext::forLoop() {
  return getRuleContext<CParser::ForLoopContext>(0);
}

CParser::IfStatementContext* CParser::ControlStatementContext::ifStatement() {
  return getRuleContext<CParser::IfStatementContext>(0);
}

CParser::ControlScopeContext* CParser::ControlStatementContext::controlScope() {
  return getRuleContext<CParser::ControlScopeContext>(0);
}


size_t CParser::ControlStatementContext::getRuleIndex() const {
  return CParser::RuleControlStatement;
}


antlrcpp::Any CParser::ControlStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CVisitor*>(visitor))
    return parserVisitor->visitControlStatement(this);
  else
    return visitor->visitChildren(this);
}

CParser::ControlStatementContext* CParser::controlStatement() {
  ControlStatementContext *_localctx = _tracker.createInstance<ControlStatementContext>(_ctx, getState());
  enterRule(_localctx, 20, CParser::RuleControlStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(184);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CParser::DO: {
        enterOuterAlt(_localctx, 1);
        setState(179);
        doWhileLoop();
        break;
      }

      case CParser::WHILE: {
        enterOuterAlt(_localctx, 2);
        setState(180);
        whileLoop();
        break;
      }

      case CParser::FOR: {
        enterOuterAlt(_localctx, 3);
        setState(181);
        forLoop();
        break;
      }

      case CParser::IF: {
        enterOuterAlt(_localctx, 4);
        setState(182);
        ifStatement();
        break;
      }

      case CParser::T__7: {
        enterOuterAlt(_localctx, 5);
        setState(183);
        controlScope();
        break;
      }
